@@ -73,7 +73,8 @@ conditions:
 Please note that due to mmap issues, aide cannot be terminated with
 SIGTERM. Use SIGKILL to terminate.
 
-The checksums in the database and in the output are base64 encoded.
+The checksums in the database and in the output are by default base64
+encoded (see also report_base16 option).
 To decode them you can use the following shell command:
 
 echo <encoded_checksum> | base64 -d | hexdump -v -e '32/1 "%02x" "\\n"'
