@@ -1,6 +1,6 @@
 /* aide, Advanced Intrusion Detection Environment
  *
- * Copyright (C) 1999-2006,2010,2011 Rami Lehti, Pablo Virolainen, Mike
+ * Copyright (C) 1999-2006,2010-2012 Rami Lehti, Pablo Virolainen, Mike
  * Markley, Richard van den Berg, Hannes von Haugwitz
  * $Header$
  *
@@ -270,6 +270,7 @@ static void setdefaults_before_config()
   conf->config_check=0;
   conf->verbose_level=-1;
   conf->detailed_init_report=0;
+  conf->report_base16=0;
   conf->use_initial_errorsto=1;
   conf->report_url=NULL;
   conf->report_fd=NULL;
